# projeto-audio

./: .gitignore  CMakeLists.txt  dsp_operations.c  dsp_operations.h  fft.c  fft.h  gnuplot_plotter.c  gnuplot_plotter.h  main.c  wav_handler.c  wav_handler.h
